Added score system

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <title>TicTacToe</title>
     </head>
     <body>
-        <h1></h1>
+        <h1>
+            <span class="x-text">X</span>: <span id="x">0</span> -
+            <span class="o-text">O</span>: <span id="o">0</span> -
+            <span class="tie-text">TIE</span>: <span id="tie">0</span>
+        </h1>
+        <h1 class="turn"></h1>
         <div class="game">
             <div class="result">
                 <div class="content">
