Added reset score button, Added more elements to the media querey

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                     <h2></h2>
                     <p>Wanna play again?</p>
                 </div>
-                <button>Again</button>
+                <div class="buttons">
+                    <button class="again">Again</button>
+                    <button class="reset">Reset Score</button>
+                </div>
             </div>
             <div class="game-squares"></div>
         </div>
