Added Temporarily Score (reset when page loads), Added tab navigation support, changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     </head>
     <body>
         <h1>
-            <span class="x-text">X</span>: <span id="x">0</span> -
-            <span class="o-text">O</span>: <span id="o">0</span> -
-            <span class="tie-text">TIE</span>: <span id="tie">0</span>
+            <span class="x-text">X</span>: <span id="x">0</span>(<span
+                id="x-session"
+                class="x-text"
+                >0</span
+            >) - <span class="o-text">O</span>: <span id="o">0</span>(<span
+                id="o-session"
+                class="o-text"
+                >0</span
+            >) - <span class="tie-text">TIE</span>:
+            <span id="tie">0</span>(<span id="tie-session" class="tie-text"
+                >0</span
+            >)
         </h1>
         <h1 class="turn"></h1>
         <div class="game">
