Added meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="shortcut icon" href="./assets/imgs/icon.png" />
+        <meta
+            name="description"
+            content="Simple TicTacToe game made with HTML, CSS, and JS. With a score system, effects, animations, sounds, and more."
+        />
         <title>TicTacToe</title>
     </head>
     <body>
