Fixed score display on small screens

--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
     </head>
     <body>
         <h1>
-            <span class="x-text">X</span>: <span id="x">0</span>(<span
-                id="x-session"
-                class="x-text"
-                >0</span
-            >) - <span class="o-text">O</span>: <span id="o">0</span>(<span
-                id="o-session"
-                class="o-text"
-                >0</span
-            >) - <span class="tie-text">TIE</span>:
-            <span id="tie">0</span>(<span id="tie-session" class="tie-text"
-                >0</span
-            >)
+            <div>
+                <span class="x-text">X</span>: <span id="x">0</span>(<span
+                    id="x-session"
+                    class="x-text"
+                    >0</span
+                >) -
+            </div>
+            <div>
+                <span class="o-text">O</span>: <span id="o">0</span>(<span
+                    id="o-session"
+                    class="o-text"
+                    >0</span
+                >) -
+            </div>
+            <div>
+                <span class="tie-text">TIE</span>: <span id="tie">0</span>(<span
+                    id="tie-session"
+                    class="tie-text"
+                    >0</span
+                >)
+            </div>
         </h1>
         <h1 class="turn"></h1>
         <div class="game">
