--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>TicTacToe</title>
     </head>
     <body>
-        <h1>
+        <h1 class="score">
             <div>
                 <span class="x-text">X</span>: <span id="x">0</span>(<span
                     id="x-session"
