Added replay and reset buttons in the main board (no need to finish game).

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             </div>
             <div class="game-squares"></div>
         </div>
+        <div class="buttons">
+            <button class="again" id="again">Again</button>
+            <button class="reset" id="reset">Reset Score</button>
+        </div>
     </body>
     <script src="./script/script.js"></script>
 </html>
