--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             <button class="again" id="again">Again</button>
             <button class="reset" id="reset">Reset Score</button>
         </div>
+        <div class="credits">
+            &copy; <span class="year"></span>
+            <span class="name">Mohanad</span> All Right Reserved
+        </div>
     </body>
     <script src="./script/script.js"></script>
 </html>
